# average-character-cloud-backend

./: .env  .envrc  .gitattributes  .gitignore  Cargo.nix  Cargo.toml  Justfile  Makefile.toml  README.md  add-migration.sh  crate-hashes.json  docker-compose.yml  flake.nix  rust-toolchain.toml  schema.sql  sqldef.nix  sqlx-data.json
.sqlx/: query-0809b114693d412c36eff2cc703ceb0aa03f1a68fc825e3b177f8b707b3396a7.json  query-141b0356f966c2fa271c3389b75a6689328a993a4afe9b5a7bc0bb54494ecca4.json  query-16c8ed04ebd8cf1e55667d687df353356ba845eeba343bafea6c0ae649a30ee4.json  query-1750a68c9e81d5f78b85c1c191f7699daa8a68c1d0e478a7fba24005c5adcce6.json  query-2004be7acae64574be46b9d67230ca757e8fbc4266ff22e8ea974f10fdb344b8.json  query-29ed20009358159bca5f16cd2463966bbc098e02eb9f335c8479c902cbddf036.json  query-3c07c6938a204cbafbc0c07c74b53d63c31deb1ff1babcb8d4c20671dfcaca03.json  query-4659484169f9b0cdb8f81d7b8221eae6ad812f11ceb428551596c3d23ac299ef.json  query-65c13d9934a8d84c9843e2fad4d98f6272826d964c3bd3ca31cd734aaa6846a8.json  query-66067688805fe3317f2c69567c14ac5c1968920d0711d71eb0f5c0382fc8e74d.json  query-83497c939a69f2589a4d1a4f24a125a6d0ec126c2737fb7370d8767a922703d7.json  query-9f894549810e4ba5bf70202ed33396b942e553430523d2f324b65843009665b2.json  query-a73e11fcb52cdc1f96369e0760f68a0f988f4b8eb197234693ad278d99c8e607.json  query-ab64620b5fbe8c3d8dfd01183364df2de9e328578a525e0719b80416aab55f2a.json  query-aefcff071f276e10d3f673724cc7cb4dcdc8f4e2163d4afb1ce24891ec936fda.json  query-b7eca58598b6eb218b3bdfe4d34370213e3422e236676c90d21a4c15c32eaef9.json  query-bdf8fef62b805d98e221686b0831a89a6bdf670ae0065d9681345ff213d9ad45.json  query-bdfea274afabda485ccf186b92c464128ed61f8162ff46c2519be8b3a6fc1480.json  query-c178b155d1350dd60a56f159c6b66734f506013ca60753b0464e42ede09b45b6.json  query-c7805572a2aea705b529a4ef0f3105fd2907932e72adc6ff310da5eb1e73a042.json  query-d1947d79f32bcb143fb7a1845b5e38a795973559b20d165d9af4cb07e4fbdccd.json  query-dbf23a2a12775339ee77f488fa85b364e3cd3fa5a6c74bbef936c80d55fc8565.json  query-dcde49d0a3c69d50b8ca487d3a7a333354c9f0efd8da169378da0f87651fabf1.json  query-deb2e28b4a60c3a51bf751f27fc8fbea7691d67c0aa19d2b91300a3fbe2e83f8.json  query-dfe79ce6840b97a3bfa2a62ffb70c60635afd1f7150b9c98044a74c43b6b68cd.json  query-fca9ba16d3f8232034750f4043ee3f9f06bf0ce208730bbe6cb2a549a5e58f95.json
migrations/: 20220526060600_init.down.sql  20220526060600_init.up.sql  20220627082547_add-stroke_count.down.sql  20220627082547_add-stroke_count.up.sql  20220627133924_add-characters.down.sql  20220627133924_add-characters.up.sql  20220709041543_init.down.sql  20220709041543_init.up.sql  20220919080214_create-user_configs-table.down.sql  20220919080214_create-user_configs-table.up.sql  20220921025759_create-character_config_seeds-table.down.sql  20220921025759_create-character_config_seeds-table.up.sql  20220921030040_remove-character_configs-id.down.sql  20220921030040_remove-character_configs-id.up.sql  20220921070507_add-user_configs-index.down.sql  20220921070507_add-user_configs-index.up.sql  20220921070655_add-character_config_seeds-updated_at.down.sql  (+20 more)
src/: app_config.rs  job.rs  (+8 more)
(+77 files in other folders)
