[package]
edition = "2021"
name = "average-character-cloud-backend"
version = "0.1.0"

[dependencies]
actix-session = {version = "0.6.2", features = ["redis-rs-session"]}
actix-web = "4.0.1"
actix-web-extras = {git = "https://github.com/ctron/actix-web-extras.git", rev = "e896994e38b253e270546f186780e3d1c99d0d3b"}
anyhow = "1.0.57"
arc-swap = "1.5.0"
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
jsonwebtoken = {version = "8.1.0", features = ["use_pem"]}
juniper = "0.15.9"
log = "0.4.17"
redis = {version = "0.21.5", features = ["aio", "connection-manager", "tokio-comp"]}
reqwest = "0.11.10"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "postgres", "json", "chrono", "offline"]}
time = "0.3.9"
ulid = "0.5.0"
