[package]
edition = "2021"
name = "average-character-cloud-backend"
version = "0.1.0"

[dependencies]
actix-session = {version = "0.6.2", features = ["redis-rs-session"]}
actix-web = "4.0.1"
actix-web-extras = {git = "https://github.com/ctron/actix-web-extras.git", rev = "e896994e38b253e270546f186780e3d1c99d0d3b"}
anyhow = "1.0.57"
aws-config = {version = "1.1.7", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.93.0"
base64 = "0.13.0"
chrono = "0.4.19"
clap = {version = "3.2.16", features = ["derive"]}
cron = "0.11.0"
dataloader = {version = "0.18.0", features = ["runtime-tokio"], default-features = false}
derive_more = "0.99.17"
faktory = "0.12.1"
jsonwebtoken = {version = "8.1.0", features = ["use_pem"]}
juniper = "0.15.9"
num_cpus = "1.17.0"
r2d2 = "0.8.10"
reqwest = "0.11.10"
serde = "1.0.137"
serde-env = "0.1.0"
serde_json = "1.0.81"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "offline", "postgres"]}
thiserror = "1.0"
time = "0.3.9"
tokio = {version = "1.19.2", features = ["sync", "rt", "macros"]}
tracing = "0.1"
tracing-actix-web = "0.6"
tracing-subscriber = "0.2"
ulid = "0.5.0"
